--- a/osu-cleaner/Properties/Resources.resx
+++ b/osu-cleaner/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="osu_cleaner_logo_256" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\osu-cleaner-logo.256.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="osu_cleaner_logo_256_click" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\osu-cleaner-logo.256_click.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="osu_cleaner_logo_256_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\osu-cleaner-logo.256_hover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
